feat: 메모리에서 직업 조회